--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "appcenter-analytics": "^1.1.0",
     "appcenter-crashes": "^1.1.0",
     "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react-native": "0.51.0",
+    "react-native-code-push": "^5.2.1"
   },
   "devDependencies": {
     "babel-jest": "22.0.3",
